Corrected alignment of social media icon placeholders

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,13 +59,18 @@ p{
     font-size:2rem;
     color: #EAE2B7;
 }
+a{
+    text-decoration: none;
+    font-size: 2.5rem;
+    color: #EAE2B7;
+}
 .nav-bar a{
     font-size:2.5rem;
     color:#F77F00;
     border: 2px solid #F77F00;
     padding:5px;
-    text-decoration: none;
 }
+
 .nav-bar a:hover{
     color: #EAE2B7;
 }
@@ -145,8 +150,14 @@ p{
 .social-cont{
     display:flex;
     justify-content: space-between;
-
+    height:140px;
 }
+.social-item{
+    display: flex;
+    align-items: center;
+    height:140px;
+}
+
 
 @media only screen and (max-width: 1050px) {
     .port-cont{
